# bio-attention

./: .readthedocs.yaml  LICENSE  README.md  setup.cfg  sliding_window_attn.py
.github/workflows/: publish.yml
bio_attention/: __init__.py  attention.py  embed.py  positional.py
bio_attention/docs/source/: bio-attention.rst
docs/: requirements.txt
docs/source/: attention.rst  bio-attention.rst  conf.py  embed.rst  index.rst  positional.rst
