[metadata]
name = bio-attention
author = Gaetan De Waele
description = Simple implementations of attention modules adapted for the biological data domain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdewael/bio-attention
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    torch
    einops
